[package]
name = "rust_runtime"
version = "0.1.0"
authors = ["Patrick Norton <patrick.147.norton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
num-derive = "0.3.0"
num-traits = "0.2.11"
lazy_static = "1.4.0"
downcast-rs = "1.1.1"
ascii = "1.0.0"
