[package]
name = "rust_runtime"
version = "0.1.0"
authors = ["Patrick Norton <patrick.147.norton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
num-bigint = "0.4.1"  # Until num gets updated, needed for the DoubleEndedIterator impl
num-derive = "0.3.3"
num-traits = "0.2.14"
downcast-rs = "1.2.0"
ascii = "1.0.0"
once_cell = "1.8.0"
